[tool.poetry]
name = "clusterenv"
version = "0.1.0"
description = ""
authors = ["dev0Guy <97923827+dev0Guy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
gymnasium = "^0.29.1"
numba = "^0.59.1"
matplotlib = "3.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["clusterenv"]
