[tool.poetry]
name = "clusterenv"
version = "0.1.0"
description = ""
authors = ["dev0Guy <97923827+dev0Guy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tianshou = "^1.0.0"
returns = "^0.23.0"
pydantic = "^2.7.4"
pygame = "^2.6.0"
moviepy = "^1.0.3"
jupyter-black = "^0.3.4"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}
wandb = "^0.17.3"
isort = "^5.13.2"
pyright = "^1.1.369"
jupyter = "^1.0.0"

[tool.black]
line-length = 1100
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
